--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation project(':payments')
-    implementation project(':orion')
+//    implementation project(':orion')
     implementation project(':orion:network')
-    implementation "com.github.urbanclap-admin.android-orion:plugins:0.0.53"
+//    implementation "com.github.urbanclap-admin.android-orion:plugins:0.0.53"
 }
